0030437: Visualization, TKV3d - add Draw command to print rendering statistics

Add new command "vstatprofiler" to manage rendering parameters and print them.
If there are some input parameters - print corresponding statistic counters values,
else - print all performance counters set previously.